feat: Improve ProfilePropertySetting API and Caching - MEED-8362 - Meeds-io/meeds#2904 (#264)
This change will fix API change of ProfilePropertySetting API change
which improved caching and performances.

Resolves Meeds-io/meeds#2904